--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "ink": "^6.3.1",
     "ink-spinner": "^5.0.0",
     "ink-text-input": "^6.0.0",
-    "react": "^19.2.0"
+    "react": "^19.2.0",
+    "react-devtools-core": "^6.1.5"
   },
   "devDependencies": {
     "@types/bun": "latest",
